fsharp/grammar.js
    file: ($) =>
      choice(
        repeat1($.namespace),
        prec(-1, repeat(choice($._module_elem, $._elem_separator))),
        prec(1, $.named_module),
      ),

    // The optional leading _elem_separator matters when the file opens with
    // an extra (e.g. a doc comment) before the header keyword: the scanner
    // fires the separator after the extra's newline, and if only the plain
    // module-elements arm of `file` could shift it, doing so would commit
    // the parse away from namespace/named_module before the keyword is even
    // seen (`module M` then mis-parses as a module_defn missing its `=`).
    namespace: ($) =>
      seq(
        optional($._elem_separator),
        "namespace",
        choice(
          "global",
          field("name", seq(optional("rec"), $.long_identifier)),
        ),
        repeat(choice($._module_elem, $._elem_separator)),
      ),

    _module_elem: ($) =>
      choice(
        alias($.value_declaration, $.declaration_expression),
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $.exception_definition,
        $.extern_binding,
        $._expression,
        $.preproc_if,
        alias($._attribute_expression, $.declaration_expression),
        // $.exception_defn
      ),

    module_defn: ($) =>
      prec.left(
        seq(
          optional($.attributes),
          "module",
          optional($.access_modifier),
          optional("rec"),
          $.identifier,
          "=",
          choice(
            scoped($._module_body, $._indent, $._dedent),
            seq(
              "begin",
              scoped(optional($._module_body), $._indent, $._dedent),
              "end",
            ),
          ),
        ),
      ),

    _module_body: ($) =>
      seq(
        $._module_body_elem,
        repeat(
          prec(
            // Make sure to parse a module node before a sequential expression
            // NOTE: This removes all sequential expressions from module bodies
            PREC.SEQ_EXPR + 1,
            seq(alias($._newline, ";"), $._module_body_elem),
          ),
        ),
      ),

    value_declaration: ($) =>
      seq(
        optional($.attributes),
        choice(
          prec(PREC.LET_DECL, $.function_or_value_defn),
          prec(PREC.DO_DECL, $.do),
        ),
      ),

    do: ($) => prec(PREC.DO_EXPR + 1, seq("do", $._expression_block)),

    _function_or_value_defns: ($) =>
      prec.right(
        seq(
          $._function_or_value_defn_body,
          repeat(seq("and", $._function_or_value_defn_body)),
        ),
      ),

    function_or_value_defn: ($) =>
      seq(
        choice("let", "let!"),
        choice(
          $._function_or_value_defn_body,
          seq("rec", $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: ($) =>
      seq(
        choice($.function_declaration_left, $.value_declaration_left),
        optional(seq(":", $._type)),
        optional($.type_argument_constraints),
        "=",
        field("body", $._expression_block_for_let),
      ),

    value_declaration_left: ($) =>
      prec.left(
        2,
        seq(
          optional("mutable"),
          optional($.access_modifier),
          $._pattern,
          optional($.type_arguments),
        ),
      ),

    primary_constr_args: ($) =>
      seq(
        optional($.attributes),
        optional($.access_modifier),
        "(",
        optional($._pattern),
        ")",
        optional($.class_as_reference),
      ),

    //
    // Pattern rules (BEGIN)

    // Pattern precedence (used by repeat_pattern, typed_pattern, optional_pattern):
    //   optional_pattern (3) > typed_pattern (2) > comma-element (1).
    // This ensures `?x: T` parses as `(typed (optional x) T)` and `(a: T, b: T)`
    // parses as a repeat of two typed_patterns rather than a typed_pattern over
    // the whole repeat.
    _pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.typed_const_pattern,
        $.const,
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
        $.named_field_pattern,
      ),

    paren_pattern: ($) => prec(1, seq("(", $._pattern, ")")),

    typed_pattern: ($) =>
      prec.left(
        2,
        seq(
          $._pattern,
          ":",
          $._type,
          field("constraints", optional($.type_argument_constraints)),
        ),
      ),

    identifier_pattern: ($) =>
      prec.left(
        1,
        seq(
          $.long_identifier_or_op,
          optional($._pattern),
          optional($._pattern),
        ),
      ),

    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: ($) => seq($._indent, $._expression, $._dedent),

    // Like _expression_block, but also allows the block to be terminated by
    // the 'in' keyword instead of a dedent.  Used for let/use bindings so that
    // single-line  let x = 1 in x  works (where no newline → no DEDENT).
    _expression_block_for_let: ($) =>
      seq($._indent, $._expression, choice($._dedent, $._in)),

    _expression: ($) =>
      choice(
        "null",
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.generic_new_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        // Short-form comprehension `for x in xs -> e` so nested comprehensions
        // like `[ for l in 0..3 do for h in 0..3 -> (l, h) ]` parse — the
        // do-form body is a plain expression block.
        $.short_comp_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        $.tuple_expression,
        $.application_expression,
        $.dot_expression,
        alias($.preproc_if_in_expression, $.preproc_if),
        $.srtp_call_expression,
      ),

    long_identifier_or_op: ($) =>
      prec.right(
        choice(
          $.long_identifier,
          seq($.long_identifier, ".", $._identifier_or_op),
          $._identifier_or_op,
        ),
      ),

    _else_expression: ($) => seq("else", field("else", $._expression_block)),

    _then_expression: ($) => seq("then", field("then", $._expression_block)),

    _if_branch: ($) => seq("if", field("guard", $._expression_block)),

    if_expression: ($) =>
      seq(
        $._if_branch,
        $._then_expression,
        repeat($.elif_expression),
        optional($._else_expression),
      ),

    declaration_expression: ($) =>
      seq(
        choice(
          seq(choice("use", "use!"), optional("mutable"), $.identifier, optional(seq(":", $._type)), "=", $._expression_block_for_let),
          seq(
            $.function_or_value_defn,
            repeat($.and_bang),
          ),
        ),
        field("in", $._expression),
      ),

    _high_prec_app: ($) =>
      prec.left(
        PREC.DOT + 1,
        seq(
          $._expression,
          choice(
            $.unit,
            seq(token.immediate(prec(10000, "(")), $._paren_expression_block, ")"),
          ),
        ),
      ),

    _low_prec_app: ($) =>
      prec.left(PREC.APP_EXPR, seq($._expression, $._expression)),

    application_expression: ($) => choice($._high_prec_app, $._low_prec_app),

    dot_expression: ($) =>
      prec.right(
        PREC.DOT,
        seq(
          field("base", $._expression),
          ".",
          field("field", $.long_identifier_or_op),
        ),
      ),

    infix_expression: ($) =>
      choice(
        prec.left(
          PREC.INFIX_OR,
          seq($._expression, alias(choice("||", "or"), $.infix_op), $._expression),
        ),
        prec.left(
          PREC.INFIX_AND,
          seq($._expression, alias("&&", $.infix_op), $._expression),
        ),
        prec.left(
          PREC.SPECIAL_INFIX,
          seq($._expression, $.infix_op, $._expression),
        ),
      ),

    sequential_expression: ($) =>
      prec.right(
        PREC.SEQ_EXPR,
        seq(
          $._expression,
          repeat1(
            prec.right(
              PREC.SEQ_EXPR,
              seq(alias($._newline, ";"), $._expression),
            ),
          ),
        ),
      ),

    //
    // Expressions (END)
    //

    //
    // Computation expression (BEGIN)
    //

    _type: ($) =>
      prec(
        4,
        choice(
          $.simple_type,
          $.generic_type,
          $.paren_type,
          $.function_type,
          $.compound_type,
          $.postfix_type,
          $.list_type,
          $.byref_type,
          $.static_type,
          $.type_argument,
          $.constrained_type,
          $.flexible_type,
          $.anon_record_type,
          $.struct_type,
        ),
      ),

    // Like _type but excludes compound_type and function_type, used in member
    // signature argument positions. Per F# spec, T * T before -> is always two
    // separate positional arguments (not a tuple-typed arg); tuple/function-typed
    // arguments must be parenthesized: (T * T) or (T -> T).
    simple_type: ($) => choice($.long_identifier, $._static_type_identifier),
    _static_type_identifier: ($) =>
      prec(10, seq(choice("^", token(prec(100, "'"))), $.identifier)),

    type_definition: ($) =>
      prec.left(
        seq(
          optional($.attributes),
          "type",
          // Attributes may also sit between `type` and the name:
          // `type [<Struct>] R = ...`
          optional($.attributes),
          $._type_defn_body,
          repeat(
            seq(
              "and",
              choice(
                seq(optional($.attributes), $._type_defn_body),
                seq($._indent, optional($.attributes), $._type_defn_body, $._dedent),
              ),
            ),
          ),
        ),
      ),

    _type_defn_body: ($) =>
      choice(
        $.delegate_type_defn,
        $.record_type_defn,
        $.union_type_defn,
        $.interface_type_defn,
        $.anon_type_defn,
        $.enum_type_defn,
        $.type_abbrev_defn,
        $.type_extension,
        $.type_declaration,
      ),

    // Bare type declaration with no body, used for e.g. [<Measure>] type kg
    // _type_decl_newline fires only at end-of-line, making this unambiguous with anon_type_defn
    type_name: ($) =>
      prec(
        2,
        seq(
          optional($.access_modifier),
          choice(
            seq(
              field("type_name", $.long_identifier),
              optional($.type_arguments),
            ),
            seq(optional($.type_argument), field("type_name", $.identifier)), // Covers `type 'a option = Option<'a>`
          ),
          // Trailing constraint clause, e.g. `type 'a C when 'a : comparison = ...`
          optional($.type_argument_constraints),
        ),
      ),

    _class_type_body: ($) =>
      seq(
        $._class_type_body_inner,
        repeat(seq($._newline, $._class_type_body_inner)),
      ),

    anon_type_defn: ($) =>
      prec.left(
        seq(
          $.type_name,
          optional($.primary_constr_args),
          "=",
          choice(
            alias($.inline_line_comment, $.line_comment),
            scoped($._class_type_body, $._indent, $._dedent),
            seq(
              choice("begin", "class"),
              scoped(optional(seq(optional($._newline), optional($._class_type_body))), $._indent, $._dedent),
              "end",
            ),
            seq(
              alias($._struct_begin, "struct"),
              scoped(repeat($._type_defn_elements), $._indent, $._dedent),
              "end",
            ),
          ),
        ),
      ),

    _type_defn_elements: ($) =>
      choice(
        $.member_defn,
        $.interface_implementation,
        alias($.preproc_if_in_class_definition, $.preproc_if),
        // $._interface_signature
      ),

    member_defn: ($) =>
      prec(
        PREC.APP_EXPR + 100000,
        seq(
          optional($.attributes),
          choice(
            seq(
              optional("static"),
              "member",
              optional("inline"),
              optional($.access_modifier),
              $.method_or_prop_defn,
            ),
            seq(
              "abstract",
              optional("member"),
              optional($.access_modifier),
              $.member_signature,
            ),
            seq("member", "val", optional($.access_modifier), $.property_or_ident, $._val_property_defn),
            seq("override", optional($.access_modifier), $.method_or_prop_defn),
            seq("default", optional($.access_modifier), $.method_or_prop_defn),
            seq(
              optional("static"),
              "val",
              optional("mutable"),
              optional($.access_modifier),
              $.identifier,
              ":",
              $._type,
            ),
            seq("static", $.value_declaration),
            $.additional_constr_defn,
          ),
        ),
      ),

    property_or_ident: ($) =>
      choice(
        seq(
          field("instance", $.identifier),
          ".",
          field("method", $.identifier),
        ),
        $._identifier_or_op,
      ),

    _method_defn: ($) =>
      choice(
        seq(
          optional($.type_arguments),
          field("args", repeat1($._pattern)),
          "=",
          $._expression_block,
        ),
      ),

    _property_defn: ($) =>
      prec.left(
        PREC.APP_EXPR + 100001,
        seq(
          optional(seq(":", $._type)),
          choice(
            seq("=", $._expression_block),
            seq(
              "with",
              scoped(
                seq(
                  $.property_accessor,
                  repeat(seq("and", $.property_accessor)),
                ),
                $._indent,
                $._dedent,
              ),
            ),
          ),
        ),
      ),

    _val_property_defn: ($) =>
      prec.left(
        PREC.APP_EXPR + 100000,
        seq(
          optional(seq(":", $._type)),
          "=",
          $._expression,
          optional(
            seq(
              "with",
              choice(
                "get",
                "set",
                seq("get", ",", "set"),
                seq("set", ",", "get"),
              ),
            ),
          ),
        ),
      ),

    method_or_prop_defn: ($) =>
      prec(
        3,
        seq(
          field("name", $.property_or_ident),
          choice(
            $._method_defn,
            $._property_defn,
            seq(
              "with",
              scoped($._function_or_value_defns, $._indent, $._dedent),
            ),
          ),
        ),
      ),

    char: (_) =>
      prec(
        -1,
        /'([^\n\t\r\u0008\a\f\v\\]|\\["\'ntbrafv]|\\[0-9]{3}|\\u[0-9a-fA-F]{4}|\\x[0-9a-fA-F]{2}|(\\\\))?'B?/,
      ),

    _string_literal: ($) => seq('"', repeat($._string_char), '"'),

    string: ($) => choice($._string_literal, $.format_string),

    _verbatim_string_char: ($) =>
      choice($._simple_string_char, $._non_escape_char, "\\", /\"\"/),
    int: (_) => token(/[+-]?([0-9]_?)+/),
